--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Southern-Literary-Messenger-Vol-II-No-10-September-1836_74247
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Various
@@ -17,6 +20,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/481
     wikipedia: https://en.wikipedia.org/wiki/Edgar_Allan_Poe
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74247#The-Southern-Literary-Messenger-Vol-II-No-10-September-1836
 gutenberg_issued: '2024-08-13'
 gutenberg_type: Text
 identifiers:
